# LightShark

./: .clang-tidy  CMakeLists.txt  README.md
examples/: CMakeLists.txt  create.c  create.h  examples.c
include/: Board.h  Engine.h  LSBoard.h  LSBoardStatus.h  LSEngine.h  LSGenereteMoves.h  LSMoves.h  LSState.h  LSTree.h  LSTypes.h  LightShark.h  Tree.h
src/: Board.c  Engine.c  LSBoard.c  LSBoardStatus.c  LSEngine.c  LSGenereteMoves.c  LSMoves.c  LSState.c  LSTree.c  LightShark.c  Tree.c
tests/: CMakeLists.txt  main.c  tests.c
tests/tests/: check.c  check.h  start.c  start.h  tree.c  tree.h
tests/unity/: example_tests.c  example_tests.h  unity.h
